tests/invalid/Return_Invalid_10.whiley
import * from whiley.lang.*

function f() -> void:
    return 1
